2010-04-02  Roland Steiner  <rolandsteiner@chromium.org>

Reviewed by Eric Seidel.

        Bug 36741 -  Duplicate, slightly divergent implementation of Position[Iterator]::isCandidate()
        https://bugs.webkit.org/show_bug.cgi?id=36741

        Patch: change Position::isCandididate() to call the PositionIterator::isCandidate() version.
        Update PositionIterator::isCandidate() to mirror Position::isCandidate().

        Rationale: PositionIterator::isCandidate() is called in a tight loop within
        next/previousCandidate(). Also, creation of a PositionIterator from a Position
        is cheaper than vice-versa.

        Tests: ran all tests in 'editing'.

        * dom/Position.cpp:
        (WebCore::Position::isCandidate):
        * dom/PositionIterator.cpp:
        (WebCore::PositionIterator::isCandidate):

Canonical link: https://commits.webkit.org/48282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56989 268f45cc-cd09-0410-ab3c-d52691b4dbfc